Адаптив для главного экрана

--- a/sass/blocks/_hero.sass
+++ b/sass/blocks/_hero.sass
@@ -18,3 +18,8 @@
   background-color: $primary
   color: white
   +bold
+
+@media (max-width: 991px)
+  .hero
+    background-size: coverd
+    background-position: top left -20%
