--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -10,3 +10,8 @@ body
   color: $primary
   text-transform: uppercase
   background-color: transparent
+
+@media (max-width: 576px)
+  .button-o
+    font-size: 10px
+  
