--- a/sass/blocks/_navbar.sass
+++ b/sass/blocks/_navbar.sass
@@ -9,7 +9,6 @@
     display: flex
     align-items: center
     justify-content: space-between
-    min-height: 80px
   &__menu-button
   &__mobile, &__landline
     text-align: right
@@ -34,7 +33,7 @@
   padding: 16px 0
   width: 100%
   background-color: $primary
-  transform: translateY(-100%)
+  transform: translateY(-200%)
   &_active
     transform: translateY(0)
   &__nav
@@ -74,3 +73,21 @@
     display: block
     font-size: 14px
     color: $text-color-light
+
+@media (max-width: 991px)
+  
+  .navbar
+    &__landline, &__mobile
+      display: none
+
+@media (max-width: 576px)
+  .logo
+    display: none
+  .menu
+    top: 60px
+    &-button
+      height: 60px
+    &__nav
+      flex-direction: column
+    &__link
+      margin-bottom: 20px
