Сверстали блок с ценами и видами скинали

--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -32,6 +32,8 @@ img
   color: #ffffff
   +bold
   text-decoration: none
+  &:hover
+    cursor: pointer
   &-fitting
     color: $primary
     background-color: white
@@ -68,8 +70,10 @@ img
       margin-right: 20px
 
 @media (max-width: 576px)
-  .button-o
+  .button
     font-size: 10px
+    &-o
+      font-size: 10px
   .section
     padding: 60px 0
     &-title
