--- a/css/style.css
+++ b/css/style.css
@@ -352,12 +352,20 @@ img {
 }
 
 .offer-block {
-  background: #fff url("../img/offer/form-bg.jpg") no-repeat center right;
-  background-size: contain;
   -webkit-box-shadow: 0 15px 25px rgba(0, 0, 0, 0.1);
           box-shadow: 0 15px 25px rgba(0, 0, 0, 0.1);
   padding: 80px;
   margin-top: -200px;
+}
+
+.offer-block_calc-bg {
+  background: #fff url("../img/offer/form-bg_calc.jpg") no-repeat center right;
+  background-size: contain;
+}
+
+.offer-block_price-bg {
+  background: #fff url("../img/offer/form-bg_price.jpg") no-repeat center right;
+  background-size: contain;
 }
 
 .offer__title {
@@ -371,6 +379,7 @@ img {
   display: block;
   font-size: 21px;
   margin-bottom: 48px;
+  max-width: 820px;
 }
 
 .form__row {
@@ -413,15 +422,25 @@ img {
   width: 100%;
 }
 
+.form__policy {
+  margin-left: 20px;
+  display: inline-block;
+}
+
 @media (max-width: 1199px) {
   .offer__block {
     background-position: center right -120px;
   }
 }
 
+@media (max-width: 992px) {
+  .offer-block {
+    background: none;
+  }
+}
+
 @media (max-width: 768px) {
   .offer__block {
-    background: none;
     background-color: white;
     padding: 40px;
   }
@@ -450,6 +469,10 @@ img {
   }
   .form__input {
     margin-bottom: 20px;
+  }
+  .form__policy {
+    margin-left: 0;
+    margin-top: 30px;
   }
 }
 
@@ -802,5 +825,76 @@ img {
   .step {
     width: 100%;
   }
+}
+
+.reviews {
+  background-color: #f5f6f8;
+}
+
+.reviews-slider {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.reviews-slider__item {
+  text-align: center;
+}
+
+.reviews-slider__image {
+  display: block;
+  width: 70px;
+  height: 70px;
+  border: 2px solid #6a99e9;
+  border-radius: 50%;
+  margin: 20px auto;
+}
+
+.reviews-slider__text {
+  position: relative;
+  font-size: 15px;
+  font-style: italic;
+  max-width: 370px;
+  padding: 20px;
+  background-color: white;
+  border-radius: 10px;
+  margin-bottom: 20px;
+}
+
+.reviews-slider__text:after {
+  content: '';
+  position: absolute;
+  bottom: -30px;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  height: 10px;
+  border: 10px solid transparent;
+  border-top: 10px solid white;
+}
+
+.factory-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.factory-block__image {
+  margin: 20px 0px;
+}
+
+.factory-block__text {
+  margin-left: 70px;
+  -ms-flex-preferred-size: 50%;
+      flex-basis: 50%;
+  font-size: 20px;
 }
 /*# sourceMappingURL=style.css.map */
