--- a/sass/blocks/_offer.sass
+++ b/sass/blocks/_offer.sass
@@ -1,12 +1,15 @@
 .offer
   padding: 129px 0
   &-block
-    background: #fff url('../img/offer/form-bg.jpg') no-repeat center right
-    background-size: contain
     box-shadow: 0 15px 25px rgba(0, 0, 0, 0.1)
     padding: 80px
     margin-top: -200px
-    bg
+    &_calc-bg
+      background: #fff url('../img/offer/form-bg_calc.jpg') no-repeat center right
+      background-size: contain
+    &_price-bg
+      background: #fff url('../img/offer/form-bg_price.jpg') no-repeat center right
+      background-size: contain
   &__title
     font-size: 25px
     text-transform: uppercase
@@ -16,6 +19,7 @@
     display: block
     font-size: 21px
     margin-bottom: 48px
+    max-width: 820px
 .form
   &__row
     display: flex
@@ -38,16 +42,23 @@
   &__button
     height: 80px
     width: 100%
+  &__policy
+    margin-left: 20px
+    display: inline-block
 
 @media (max-width: 1199px)
   .offer
     &__block
       background-position: center right -120px
 
+@media (max-width: 992px)
+  .offer
+    &-block
+      background: none
+
 @media (max-width: 768px)
   .offer
     &__block
-      background: none
       background-color: white
       padding: 40px
     &__title
@@ -64,6 +75,9 @@
       width: 100%
     &__input
       margin-bottom: 20px
+    &__policy
+      margin-left: 0
+      margin-top: 30px
 
 @media (max-width: 480px)
   .form
