--- a/sass/style.sass
+++ b/sass/style.sass
@@ -13,3 +13,5 @@
 @import 'blocks/reviews'
 @import 'blocks/factory'
 @import 'blocks/contacts'
+@import 'blocks/questions'
+@import 'blocks/footer'
