Сверстали и насчтроили слайдер До и после

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,6 +1,7 @@
 @import 'grid'
 @import 'fonts'
 @import 'colors'
+@import 'slick'
 @import 'interface'
 @import 'blocks/navbar'
 @import 'blocks/hero'
@@ -10,6 +11,7 @@
 @import 'blocks/blog-list'
 @import 'blocks/price'
 @import 'blocks/steps'
+@import 'blocks/before'
 @import 'blocks/reviews'
 @import 'blocks/factory'
 @import 'blocks/contacts'
