--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,7 @@
 
 @font-face {
   font-family: 'Proxima Nova Semibold';
+  font-display: swap;
   src: url("../fonts/ProximaNova-Semibold.eot");
   src: url("../fonts/ProximaNova-Semibold.eot?#iefix") format("embedded-opentype"), url("../fonts/ProximaNova-Semibold.woff") format("woff"), url("../fonts/ProximaNova-Semibold.ttf") format("truetype");
   font-weight: normal;
@@ -37,6 +38,7 @@
 
 @font-face {
   font-family: 'Proxima Nova Light';
+  font-display: swap;
   src: url("../fonts/ProximaNova-Light.eot");
   src: url("../fonts/ProximaNova-Light.eot?#iefix") format("embedded-opentype"), url("../fonts/ProximaNova-Light.woff") format("woff"), url("../fonts/ProximaNova-Light.ttf") format("truetype");
   font-weight: normal;
