--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -21,6 +21,8 @@
     color: #767676
   &__pay-logo
     margin: 15px
+    height: 60px
+    width: 60px
   &__contacts
     text-align: right
   &__phone
@@ -34,6 +36,9 @@
   &-social
     &__link
       margin-left: 10px
+      img
+        width: 25px
+        height: 25px
 
 @media (max-width: 768px)
   .footer
