--- a/sass/blocks/_steps.sass
+++ b/sass/blocks/_steps.sass
@@ -3,6 +3,9 @@
   text-align: center
   &__title
       font-size: 18px
+  &__img
+    max-width: 100%
+    height: 70px
   &:last-child
     &:before
       display: none
