--- a/css/style.css
+++ b/css/style.css
@@ -677,6 +677,11 @@ input[type="checkbox"]:checked + label:before {
   margin-bottom: 100px;
 }
 
+.features-block__image {
+  max-width: 100%;
+  height: 70px;
+}
+
 @media (max-width: 991px) {
   .features-block__item {
     -ms-flex-preferred-size: 50%;
@@ -956,6 +961,11 @@ input[type="checkbox"]:checked + label:before {
   font-size: 18px;
 }
 
+.step__img {
+  max-width: 100%;
+  height: 70px;
+}
+
 .step:last-child:before {
   display: none;
 }
@@ -1175,6 +1185,8 @@ input[type="checkbox"]:checked + label:before {
 
 .contacts__image {
   margin-bottom: 25px;
+  width: 30px;
+  height: 30px;
 }
 
 .contacts__text {
@@ -1264,6 +1276,8 @@ input[type="checkbox"]:checked + label:before {
 
 .footer__pay-logo {
   margin: 15px;
+  height: 60px;
+  width: 60px;
 }
 
 .footer__contacts {
@@ -1284,6 +1298,11 @@ input[type="checkbox"]:checked + label:before {
 
 .footer-social__link {
   margin-left: 10px;
+}
+
+.footer-social__link img {
+  width: 25px;
+  height: 25px;
 }
 
 @media (max-width: 768px) {
