--- a/sass/blocks/_contacts.sass
+++ b/sass/blocks/_contacts.sass
@@ -8,6 +8,8 @@
       text-align: center
   &__image
     margin-bottom: 25px
+    width: 30px
+    height: 30px
   &__text
     font-size: 16px
   &__link
