--- a/sass/blocks/_features.sass
+++ b/sass/blocks/_features.sass
@@ -7,6 +7,9 @@
       flex-basis: 33%
       text-align: center
       margin-bottom: 100px
+    &__image
+      max-width: 100%
+      height: 70px
 
 @media (max-width: 991px)
   .features
